@@ -30,6 +30,7 @@
 - added: NoSQL backuping documents while they are updating/removing in `DatabaseBuilder.backup([user])`
 - added: `CLONE(obj)` alias for `U.clone()`
 - added: `GROUP(flags, fn)` alias for `F.group()`
+- addeD: `F.cache.set2()` it creates a persistent cache (persistent items are stored in a file)
 
 - updated: (IMPORTANT) packages compress/decompress function supports streaming data
 - updated: (IMPORTANT) `NOSQL().backup()` !!! was changed !!!!
